# algokit-fullstack-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  copier.yaml  pyproject.toml  tasks.py
.github/workflows/: cd.yaml  check-python.yaml
examples/p-py/: .algokit.toml  README.md  p-py.code-workspace
examples/p-py/.algokit/: .copier-answers.yml
examples/p-tls/: .algokit.toml  README.md  p-tls.code-workspace
examples/p-tls/.algokit/: .copier-answers.yml
examples/p-ts/: .algokit.toml  README.md  p-ts.code-workspace
examples/p-ts/.algokit/: .copier-answers.yml
examples/production_beaker_react/: .algokit.toml  .copier-answers.yml  README.md  production_beaker_react.code-workspace
examples/production_beaker_react/.algokit/: .copier-answers.yml
examples/production_puya_react/: .algokit.toml  .copier-answers.yml  README.md  production_puya_react.code-workspace
examples/production_python_react/: .algokit.toml  .copier-answers.yml  README.md  production_python_react.code-workspace
examples/production_tealscript_react/: .algokit.toml  .copier-answers.yml  .devcontainer.json  README.md  production_tealscript_react.code-workspace
examples/production_typescript_react/: .algokit.toml  README.md  production_typescript_react.code-workspace
examples/s-py/: .algokit.toml  README.md  s-py.code-workspace
examples/s-py/projects/s-py-contracts/: .algokit.toml  README.md  package.json  pyproject.toml
examples/s-py/projects/s-py-contracts/.algokit/: .copier-answers.yml
examples/s-py/projects/s-py-contracts/smart_contracts/: index.ts
examples/s-py/projects/s-py-contracts/smart_contracts/hello_world/: contract.py
examples/s-tls/: .algokit.toml  README.md  s-tls.code-workspace
examples/s-ts/: .algokit.toml  README.md  s-ts.code-workspace
examples/starter_beaker_react/: .algokit.toml  .copier-answers.yml  README.md  starter_beaker_react.code-workspace
examples/starter_puya_react/: .algokit.toml  .copier-answers.yml  README.md  starter_puya_react.code-workspace
examples/starter_python_react/: .algokit.toml  .copier-answers.yml  README.md  starter_python_react.code-workspace
examples/starter_python_react/projects/starter_python_react-contracts/: .algokit.toml  .copier-answers.yml  README.md  package.json  pyproject.toml
examples/starter_python_react/projects/starter_python_react-contracts/.algokit/: .copier-answers.yml
examples/starter_python_react/projects/starter_python_react-contracts/.algokit/generators/create_contract/smart_contracts/{{ contract_name }}/: deploy-config.ts.j2
examples/starter_python_react/projects/starter_python_react-contracts/.tours/: getting-started-with-your-algokit-project.tour
examples/starter_python_react/projects/starter_python_react-contracts/smart_contracts/: __main__.py  index.ts
examples/starter_python_react/projects/starter_python_react-contracts/smart_contracts/_helpers/: build.py
examples/starter_python_react/projects/starter_python_react-contracts/smart_contracts/hello_world/: contract.py  deploy-config.ts
examples/starter_python_react/projects/starter_python_react-contracts/smart_contracts/helpers/: build.py
examples/starter_tealscript_react/: .algokit.toml  .copier-answers.yml  README.md  starter_tealscript_react.code-workspace
examples/starter_typescript_react/: .algokit.toml  README.md  starter_typescript_react.code-workspace
template_content/: .algokit.toml  .algokit.toml.jinja  App.tsx  README.md.jinja  Transact.tsx  check_algokit_version.py  check_version{% if _copier_conf.os in ['linux', 'macos'] %}.sh{% else %}.ps1{% endif %}.jinja  copy_files{% if _copier_conf.os in ['linux', 'macos'] %}.sh{% else %}.ps1{% endif %}.jinja  inject.py  post_init.py  pre_init.py  {% if ide_vscode %}{{ project_name }}.code-workspace.jinja{% endif %}  {% if ide_vscode %}{{ project_name }}.code-workspace{% endif %}.jinja
template_content/inject_content/: AppCalls.tsx.jinja  README.md.jinja
test/starter_beaker_react/: README.md
tests/: test_templates.py
tests_generated/test_all_default_parameters_off_jetbrains/: .algokit.toml  .copier-answers.yml  README.md
tests_generated/test_all_default_parameters_off_jetbrains/backend/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_all_default_parameters_off_starter/: .copier-answers.yml  README.md
tests_generated/test_all_default_parameters_off_starter/backend/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_all_default_parameters_on_production/: .copier-answers.yml  README.md
(+351 files in other folders)
