[tool.poetry]
name = "algokit-fullstack-template"
version = "0.1.0"
description = ""
authors = ["MakerX <cto@makerx.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.260"
black = {extras = ["d"], version = "^22.10.0"}
mypy = "^1.1.1"
jinja2 = ">=3.1.1"
pytest = "^7.2.2"
types-pyyaml = "^6.0.12.9"
pyyaml = ">=5.1"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
extend-exclude = [
  "tests_generated/*",
  "template_content"
  ]
ignore = [
  "ANN101", # no type for self
  "ANN102", # no type for cls
]
unfixable = ["B", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_untyped_defs = false
strict_equality = true
exclude = [
    "tests_generated/*",
    "template_content"
]
