[tool.poetry]
name = "starter_python_react-contracts"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["None <None>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^2.2.0"
python-dotenv = "^1.0.0"
puya = { git = "https://github.com/algorandfoundation/puya.git" } # TODO: Update this once Puya v1.0.0 is released

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

